--- a/1216_day9.md
+++ b/1216_day9.md
@@ -101,3 +101,37 @@ public class Stack<T> {
 ```
 
 ### 클래스는 변경하기 쉬워야한다.
+- 새로운 sql을 추가할 때도 수정이 발생하고, 기존 sql문을 수정할 때도 수정이 발생한다.
+bad
+```
+public class Sql {
+    public func Sql(table: String, columes: [Any]) {}
+    public func create() {}
+    public func insert(fileds: String) {}
+    public func selectAll() {}
+    public func findByKey(keyColume: String, keyValue: String) {}
+}
+```
+
+good
+- 공개 인터페이스를 각각 Sql 자식 클래스로 생성
+- 클래스가 단순해져 좀더 이해하기 쉬워짐
+- 테스트 관점에서 증명하기 간편해짐
+- 기존 클래스를 건드릴 필요가 없음
+```
+public class Sql {
+    public func Sql(table: String, columes: [Any]) {}
+    public func selectAll() {}
+    public func findByKey(keyColume: String, keyValue: String) {}
+}
+
+public class createSql: Sql {
+    public func createSql() {}
+}
+
+public class InsertSql: Sql {
+    public func insertSql(fileds: String) {}
+}
+```
+
+
