--- a/1221_day13.md
+++ b/1221_day13.md
@@ -29,3 +29,27 @@ good
 ```
 if (!buffer.shouldCompact())
 ```
+- 경계조건을 캡슐화하라 : 경계 조건은 빼먹거나 놓치기 십상이다.
+bad
+```
+if(level + 1 < tags.count) {
+  var parts = Parse(body, tags, level + 1, offset + endTag)
+  var body = nil
+}
+```
+good 
+```
+var nextLevel = level + 1
+if(nextLevel < tags.count) {
+  var parts = Parse(body, tags, level + 1, offset + endTag)
+  var body = nil
+}
+```
+- 설정 정보는 최상위 단계에 둬라 : 추상화 최상위 단계에 둬야 할 기본값 설정 관련 상수를 저차원 함수에 숨겨서는 안 된다.
+### 테스트
+- 테스트 케이스는 잠재적으로 깨질 만한 부분을 모두 테스트해야 한다.
+- 커버리지 도구를 사용하라
+- 사소한 테스트를 건너뛰지 마라
+- 무시한 테스트는 모호함을 뜻한다
+- 버그 주변은 철저히 테스트하라 : 버그는 모이는 경향이 있다. 한 함수에서 버그를 발견했다면 그 함수를 철저히 테스트하는 편이 좋다.
+- 테스트는 빨라야 한다
